--- a/max_oauth2_client/src/main/resources/templates/index.html
+++ b/max_oauth2_client/src/main/resources/templates/index.html
@@ -13,7 +13,8 @@
     <form action="/oauth2-login" method="GET">
         <!--<p>账号：<input type="text" name="username" value="admin"/></p>
         <p>密码：<input type="text" name="password" value="123456"/></p>-->
-        <p><input type="submit" value="登录"/></p>
+        <!--<p><input type="submit" value="登录"/></p>-->
+        <a th:href="${oauth_url}">使用第三方账号登陆</a>
     </form>
     <!--<form id="loginform" class="form-vertical" th:action="@{/login}" action="" method="post">
         <div class="control-group normal_text"> <h3><img th:src="@{img/logo.png}" alt="Logo" /></h3></div>
