--- a/max_oauth2_client/src/main/resources/templates/oauth.html
+++ b/max_oauth2_client/src/main/resources/templates/oauth.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h1>success</h1>
+<form action="/logout" method="GET"><input type="submit" value="退出" />
+</form>
 </body>
 </html>
